--- a/password.html
+++ b/password.html
@@ -27,7 +27,7 @@
       </header>
       <!-- 主要內容區 -->
       <div class="mainContent">
-        <div class="blockTitle">登入</div>
+        <div class="blockTitle">第一次登入請修改密碼</div>
         <div class="formWrap">
           <p>
             註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。"
@@ -41,21 +41,10 @@
                   <label for="" class="formTitle"
                     ><abbr class="necessary" title="為必填(選)欄位,不能為空白。"
                       >*</abbr
-                    >帳號</label
-                  >
-                </th>
-                <td><input type="text" /></td>
-              </tr>
-              <tr>
-                <th>
-                  <label for="" class="formTitle"
-                    ><abbr class="necessary" title="為必填(選)欄位,不能為空白。"
-                      >*</abbr
                     >密碼</label
                   >
                 </th>
                 <td>
-                  <!-- <input type="password" /> -->
                   <div class="input_password">
                     <input
                       class="password"
@@ -75,23 +64,40 @@
                   <label for="" class="formTitle"
                     ><abbr class="necessary" title="為必填(選)欄位,不能為空白。"
                       >*</abbr
-                    >驗證碼</label
+                    >修改密碼</label
                   >
                 </th>
                 <td>
-                  <img src="images/captcha.gif" alt="" class="captcha" /><input
-                    type="text"
-                    id="verification"
-                    value=""
-                    title="請輸入驗證碼"
-                  />
-                  <button type="button">更換驗證碼</button>
+                  <div class="input_password">
+                    <input
+                      class="password"
+                      name="password"
+                      type="password"
+                      placeholder="請輸入密碼"
+                      title="請輸入密碼"
+                    />
+                    <button type="button" class="passwordEye hide">
+                      顯示密碼
+                    </button>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <th></th>
+                <td>
+                  <div class="pwRule">
+                    密碼原則：
+                    <ul>
+                      <li>長度8-20碼</li>
+                      <li>密碼須包含英文大小寫、數字，及特殊字元</li>
+                    </ul>
+                  </div>
                 </td>
               </tr>
             </table>
             <div class="btnGrp">
               <button type="button" class="btn">清除</button>
-              <button type="button" class="btn btnSubmit">登入</button>
+              <button type="button" class="btn btnSubmit">確認</button>
             </div>
           </form>
           <div class="ps">還沒有帳號?請參考<a href="">帳號申請須知</a></div>
